<My_habrababr Project>

--- a/my_habrababr/app/views/welcome/index.html.erb
+++ b/my_habrababr/app/views/welcome/index.html.erb
@@ -3,4 +3,6 @@
 
 <%= link_to 'Посты', posts_path =%><br><br>
 
-<%= link_to 'Коментарии', comments_path =%>
+<%= link_to 'Коментарии', comments_path =%><br><br>
+
+<%= link_to 'Категории', categories_path =%>
