<ДЗ. Виды и вложанные ресурсы>

--- a/my_habrababr/app/views/comments/show.html.erb
+++ b/my_habrababr/app/views/comments/show.html.erb
@@ -1,9 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Body:</strong>
+  <strong></strong>
   <%= @comment.body %>
 </p>
 
-<%= link_to 'Edit', edit_comment_path(@comment) %> |
-<%= link_to 'Back', comments_path %>
+<%= link_to 'Изменить', edit_comment_path(@comment) %> |
+<%= link_to 'Назад', comments_path %>
