--- a/my_habrababr/app/views/categories/edit.html.erb
+++ b/my_habrababr/app/views/categories/edit.html.erb
@@ -1,23 +1,6 @@
 <h1>Редактирование категории</h1>
 
-<%= form_for(@category) do |f| %>
-    <% if @category.errors.any? %>
-        <div id="error_explanation">
-          <h2><%= pluralize(@category.errors.count, "error") %> prohibited this category from being saved:</h2>
+<%= render 'form' %>
 
-          <ul>
-            <% @category.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-            <% end %>
-          </ul>
-        </div>
-    <% end %>
-
-    <div class="field">
-      <%= f.label :name %><br>
-      <%= f.text_area :name %>
-    </div>
-    <div class="actions">
-      <%= f.submit %>
-    </div>
-<% end %>
+<%= link_to 'Показать', @category %> |
+<%= link_to 'Назад', categories_path %>
