--- a/my_habrababr/app/views/categories/index.html.erb
+++ b/my_habrababr/app/views/categories/index.html.erb
@@ -5,7 +5,7 @@
 <table>
   <thead>
   <tr>
-    <th>Body</th>
+    <th>Имя</th>
     <th colspan="3"></th>
   </tr>
   </thead>
@@ -14,9 +14,9 @@
   <% @categories.each do |category| %>
       <tr>
         <td><%= category.name %></td>
-        <td><%= link_to 'Show', category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Показать', category %></td>
+        <td><%= link_to 'Изменить', edit_category_path(category) %></td>
+        <td><%= link_to 'Удалить', category, method: :delete, data: { confirm: 'Вы уверены?' } %></td>
       </tr>
   <% end %>
   </tbody>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Category', new_category_path %>
+<%= link_to 'Новая категория', new_category_path %>
