--- a/my_habrababr/app/views/categories/show.html.erb
+++ b/my_habrababr/app/views/categories/show.html.erb
@@ -1,9 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Body:</strong>
+  <strong>Категории:</strong>
   <%= @category.name %>
 </p>
 
-<%= link_to 'Edit', edit_category_path(@category) %> |
-<%= link_to 'Back', categories_path %>
+<%= link_to 'Изменить', edit_category_path(@category) %> |
+<%= link_to 'Назад', categories_path %>
