--- a/my_habrababr/app/views/comments/index.html.erb
+++ b/my_habrababr/app/views/comments/index.html.erb
@@ -2,26 +2,27 @@
 
 <h1>Лист Комментариев</h1>
 
+
 <table>
   <thead>
-    <tr>
-      <th>Body</th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th>Body</th>
+    <th colspan="3"></th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @comments.each do |comment| %>
+  <% @comments.each do |comment| %>
       <tr>
         <td><%= comment.body %></td>
         <td><%= link_to 'Show', comment %></td>
         <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
-        <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Вы уверены?' } %></td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Comment', new_comment_path %>
+<%= link_to 'Новый комментарий', new_comment_path %>
