--- a/my_habrababr/app/views/posts/index.html.erb
+++ b/my_habrababr/app/views/posts/index.html.erb
@@ -1,29 +1,16 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Лист постов</h1>
+<%= link_to 'НОВЫЙ ПОСТ', new_post_path, class: 'btn btn-large' %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Body</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<h1>
+  <% if @category %>
+      <%= 'Список публикаций категории '+@category.name %>
+  <% else %>
+      Список публикаций
+  <% end %>
+</h1>
 
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.body %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <%= render @posts %>
 
-<br>
+  <br>
 
-<%= link_to 'New Post', new_post_path %>
