--- a/my_habrababr/app/views/posts/show.html.erb
+++ b/my_habrababr/app/views/posts/show.html.erb
@@ -1,14 +1,34 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @post.title %>
-</p>
+<h2> <%= @post.title %></h2>
+
+<h5>
+  <strong>Категории:</strong>
+  <%= render @post.categories %>
+</h5>
 
 <p>
-  <strong>Body:</strong>
   <%= @post.body %>
 </p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+
+
+<% unless @post.comments.empty? %>
+    <strong><%= 'Комментарии ('+@post.comments.count.to_s+')'%></strong>
+    <% @post.comments.each do |comment| %>
+        <p><%= comment.body %></p>
+        <p><%= link_to "Удалить", comment, method: :delete %></p>
+        <p><%= link_to "Изменить", edit_comment_path %></p>
+    <% end %>
+    <strong>Новый комментарий:</strong>
+<% else %>
+    <strong>Комментариев нет. Оставьте комментарий первым.</strong>
+    <br>
+<% end %>
+
+
+<%= render 'comments/form' %>
+
+
+<%= link_to 'Изменить', edit_post_path(@post) %> |
+<%= link_to 'Назад', posts_path %>
