<ДЗ. Виды и вложанные ресурсы>

--- a/my_habrababr/app/views/comments/index.html.erb
+++ b/my_habrababr/app/views/comments/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Лист Комментариев</h1>
 
 
@@ -25,4 +23,4 @@
 
 <br>
 
-<%= link_to 'Новый комментарий', new_comment_path %>
+<%= link_to 'Новый комментарий', new_post_comment_path %>
