--- a/my_habrababr/app/views/comments/show.html.erb
+++ b/my_habrababr/app/views/comments/show.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 
 <p>
   <strong></strong>
@@ -6,4 +5,4 @@
 </p>
 
 <%= link_to 'Изменить', edit_comment_path(@comment) %> |
-<%= link_to 'Назад', comments_path %>
+<%= link_to 'Назад', post_comments_path %>
