--- a/my_habrababr/app/views/layouts/application.html.erb
+++ b/my_habrababr/app/views/layouts/application.html.erb
@@ -50,7 +50,13 @@
           <ul class="nav navbar-nav">
             <!--<li><%= link_to "Link1", "/path1"  %></li>-->
             <!--<li><%= link_to "Link2", "/path2"  %></li>-->
-            <!--<li><%= link_to "Link3", "/path3"  %></li>-->
+            <li><% if user_signed_in?  %>
+                  <span><%= current_user.email %></span>
+                <%= link_to 'Выйти', destroy_user_session_path, method: :delete %>
+                <% else %>
+              <%= link_to 'Войти', new_user_session_path %>
+                  <% end %>
+            </li>
           </ul>
         </div>
       </div>
