--- a/my_habrababr/app/views/comments/show.html.erb
+++ b/my_habrababr/app/views/comments/show.html.erb
@@ -5,4 +5,4 @@
 </p>
 
 <%= link_to 'Изменить', edit_comment_path(@comment) %> |
-<%= link_to 'Назад', post_comments_path %>
+<%= link_to 'Назад', post_path %>
