--- a/my_habrababr/app/views/comments/edit.html.erb
+++ b/my_habrababr/app/views/comments/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Показать', @comment %> |
-<%= link_to 'Назад', post_path %>
+<%= link_to 'Назад', @comment.post %>
