--- a/my_habrababr/app/views/admin/categories/_form.html.erb
+++ b/my_habrababr/app/views/admin/categories/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@category) do |f| %>
+<%= form_for([:admin, @category]) do |f| %>
     <%= render 'common/errors', object: @category %>
 
 
