--- a/my_habrababr/app/views/categories/show.html.erb
+++ b/my_habrababr/app/views/categories/show.html.erb
@@ -1,7 +1,10 @@
 <p>
   <strong>Категории:</strong>
-  <%= @category.name %>
+  <%= @categories.name %>
 </p>
 
-<%= link_to 'Изменить', edit_category_path(@category) %> |
-<%= link_to 'Назад', categories_path %>
+<%= render @posts %>
+
+<% if current_user && current_user.admin? %>
+    <%= link_to  'Все категории', admin_categories_path %>
+<% end %>
