--- a/my_habrababr/app/views/comments/show.html.erb
+++ b/my_habrababr/app/views/comments/show.html.erb
@@ -3,6 +3,7 @@
   <strong></strong>
   <%= @comment.body %>
 </p>
-
+<% if user_signed_in? && (current_user.author_of?(@comment) || current_user.admin?) %>
 <%= link_to 'Изменить', edit_comment_path(@comment) %> |
-<%= link_to 'Назад', post_path %>
+<%= link_to 'Назад', @comment.post %>
+<% end %>
