--- a/my_habrababr/app/views/layouts/application.html.erb
+++ b/my_habrababr/app/views/layouts/application.html.erb
@@ -45,18 +45,26 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">MyHabrababr</a>
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav">
-            <!--<li><%= link_to "Link1", "/path1"  %></li>-->
-            <!--<li><%= link_to "Link2", "/path2"  %></li>-->
-            <li><% if user_signed_in?  %>
-                  <span><%= current_user.email %></span>
-                <%= link_to 'Выйти', destroy_user_session_path, method: :delete %>
-                <% else %>
-              <%= link_to 'Войти', new_user_session_path %>
-                  <% end %>
-            </li>
+        <%= link_to 'MyHabrababr', root_path, class: 'navbar-brand' %>
+        <div class="col-lg-9 navbar-collapse collapse navbar-responsive-collapse">
+            <% if current_user && current_user.admin? %>
+            <ul class="nav navbar-nav">
+                <li><%= link_to 'Админка', admin_categories_path  %></li>
+            </ul>
+            <% end %>
+        </div>
+        <div class="col-lg-3 col-lg-push-9 navbar-collapse collapse navbar-responsive-collapse">
+                <% if user_signed_in?  %>
+                <ul class="nav navbar-nav">
+                    <li><%= current_user.email %>
+                    <%= link_to 'Выйти', destroy_user_session_path, method: :delete %>
+                    </li>
+                </ul>
+                    <% else %>
+                    <ul class="nav navbar-nav">
+                        <li><%= link_to 'Войти', new_user_session_path %></li>
+                    </ul>
+                <% end %>
           </ul>
         </div>
       </div>
