--- a/my_habrababr/app/views/posts/show.html.erb
+++ b/my_habrababr/app/views/posts/show.html.erb
@@ -28,9 +28,11 @@
               <%= comment.user.email %>
             </p>
         <% end %>
-        <% if comment.user == current_user %>
-            <p><%= link_to "Удалить", comment, method: :delete, data: {confirm: 'Точно удаляем?'} %></p>
-            <p><%= link_to "Изменить", edit_comment_path(comment) %></p>
+        <% if user_signed_in? && (current_user.author_of?(comment) || current_user.admin?) %>
+            <ul>
+            <%= link_to 'Удалить', comment, method: :delete, data: {confirm: 'Точно удаляем?'} %>
+            <%= link_to 'Изменить', edit_comment_path(comment) %>
+            </ul>
         <% end %>
     <% end %>
     <strong>Новый комментарий:</strong>
@@ -41,10 +43,10 @@
 
 <%= render 'comments/form' %>
 
-<% if @post.user == current_user %>
+<% if user_signed_in? && (current_user.author_of?(@post) || current_user.admin?) %>
     <%= link_to 'Изменить', edit_post_path(@post) %> |
     <%= link_to 'Удалить', @post, method: :delete %> |
 <% end %>
 
 
-<%= link_to 'Назад', posts_path %>
+<%= link_to 'К списку постов', posts_path %>
