--- a/my_habrababr/app/views/admin/categories/_form.html.erb
+++ b/my_habrababr/app/views/admin/categories/_form.html.erb
@@ -6,6 +6,6 @@
       <%= f.text_area :name %>
     </div>
     <div class="actions">
-      <%= f.submit %>
+      <%= f.submit t('.submit')%>
     </div>
 <% end %>
