--- a/my_habrababr/app/views/posts/show.html.erb
+++ b/my_habrababr/app/views/posts/show.html.erb
@@ -30,8 +30,8 @@
         <% end %>
         <% if user_signed_in? && (current_user.author_of?(comment) || current_user.admin?) %>
             <ul>
-            <%= link_to 'Удалить', comment, method: :delete, data: {confirm: 'Точно удаляем?'} %>
-            <%= link_to 'Изменить', edit_comment_path(comment) %>
+            <%= link_to t('common.delete'), comment, method: :delete, data: {confirm: 'Точно удаляем?'} %>
+            <%= link_to t('common.edit'), edit_comment_path(comment) %>
             </ul>
         <% end %>
     <% end %>
@@ -43,10 +43,23 @@
 
 <%= render 'comments/form' %>
 
-<% if user_signed_in? && (current_user.author_of?(@post) || current_user.admin?) %>
-    <%= link_to 'Изменить', edit_post_path(@post) %> |
-    <%= link_to 'Удалить', @post, method: :delete %> |
+<% if user_signed_in? %>
+    <% if current_user.author_of?(@post) || current_user.admin? %>
+        <% if @post.published? %>
+            <%= link_to t('.hide'), hide_post_path(@post), method: :patch %> |
+            <% else %>
+            <%= link_to t('.publish'), publish_post_path(@post), method: :patch %> |
+        <% end %>
+        <%= link_to t('common.edit'), edit_post_path(@post) %> |
+        <%= link_to t('common.delete'), @post, method: :delete, data: {confirm: 'Точно удаляем?'} %> |
+    <% end %>
+
+    <td>
+        <% if current_user.subscribed_to?(@post) %>
+            <%= link_to t('.subscribe'), current_user.subscription_for(@post), method: :delete %> |
+        <% else %>
+            <%= link_to t('.unsubscribe'), post_subscriptions_path(@post), method: :post %> |
+        <% end %>
+    </td>
 <% end %>
-
-
-<%= link_to 'К списку постов', posts_path %>
+<%= link_to t('common.root'), posts_path %>
