--- a/my_habrababr/app/views/admin/categories/edit.html.erb
+++ b/my_habrababr/app/views/admin/categories/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Редактирование категории</h1>
+<h1><%= t('.title') %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Показать', @category %> |
-<%= link_to 'Назад', admin_categories_path %>
+<%= link_to t('common.show'), @category %> |
+<%= link_to t('common.back'), admin_categories_path %>
