--- a/my_habrababr/app/views/admin/categories/show.html.erb
+++ b/my_habrababr/app/views/admin/categories/show.html.erb
@@ -4,6 +4,6 @@
 </p>
 
 <% if current_user && current_user.admin? %>
-    <%= link_to 'Изменить', edit_admin_category_path(@category) %> |
-    <%= link_to 'Назад', admin_categories_path %>
+    <%= link_to t('common.edit'), edit_admin_category_path(@category) %> |
+    <%= link_to t('common.back'), admin_categories_path %>
 <% end %>
