--- a/my_habrababr/app/views/comments/_form.html.erb
+++ b/my_habrababr/app/views/comments/_form.html.erb
@@ -5,6 +5,6 @@
     <%= f.text_area :body %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit t('.submit') %>
   </div>
 <% end %>
