--- a/my_habrababr/app/views/comments/edit.html.erb
+++ b/my_habrababr/app/views/comments/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Редактироать Комментарий</h1>
+<h1><%= t('.title') %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Показать', @comment %> |
-<%= link_to 'Назад', @comment.post %>
+<%= link_to t('common.show'), @comment %> |
+<%= link_to t('common.back'), @comment.post %>
