--- a/my_habrababr/app/views/comments/new.html.erb
+++ b/my_habrababr/app/views/comments/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Новый Комментарий</h1>
+<h1><%= t('.title') %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', @post %>
+<%= link_to t('common.back'), @post %>
