--- a/my_habrababr/app/views/comments/show.html.erb
+++ b/my_habrababr/app/views/comments/show.html.erb
@@ -4,6 +4,6 @@
   <%= @comment.body %>
 </p>
 <% if user_signed_in? && (current_user.author_of?(@comment) || current_user.admin?) %>
-<%= link_to 'Изменить', edit_comment_path(@comment) %> |
-<%= link_to 'Назад', @comment.post %>
+<%= link_to t('common.edit'), edit_comment_path(@comment) %> |
+<%= link_to t('common.back'), @comment.post %>
 <% end %>
