--- a/my_habrababr/app/views/posts/_form.html.erb
+++ b/my_habrababr/app/views/posts/_form.html.erb
@@ -15,6 +15,6 @@
     </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit t('.submit', action: @post.new_record? ? t('common.create') : t('common.edit')) %>
   </div>
 <% end %>
