--- a/my_habrababr/app/views/posts/_post.html.erb
+++ b/my_habrababr/app/views/posts/_post.html.erb
@@ -7,9 +7,7 @@
 
   <div class="row">
     <p><%= truncate(post.body, length: 100) %></p>
-    <p><%= link_to 'Читать далее', post %></p>
+    <p><strong><%= link_to 'Читать далее', post %></strong></p> <br>
   </div>
-
   <hr>
-
 </div>
