--- a/my_habrababr/app/views/posts/new.html.erb
+++ b/my_habrababr/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Новый Пост</h1>
+<h1><%= t('.title') %></h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Назад', posts_path %>
+<%= link_to t('common.back'), posts_path %>
